--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<a href="eatit.html"><img class="graficlogo" src="img/logo.png" alt="Logo"></a>
 		</div>
 		<nav>
-			<div class="topnav" id="myTopnav">                    <!-- ñòâîðþ êíîïêè íà ãîëîâí³é ñòîð³íö³ -->
+			<div class="topnav" id="myTopnav">                    <!-- Ã±Ã²Ã¢Ã®Ã°Ã¾ ÃªÃ­Ã®Ã¯ÃªÃ¨ Ã­Ã  Ã£Ã®Ã«Ã®Ã¢Ã­Â³Ã© Ã±Ã²Ã®Ã°Â³Ã­Ã¶Â³ -->
 				<a href="eatit.html"> HOME </a>
 				<a href="screenshots.html"> SCREENSHOTS </a>
 				<a href="about.html"> ABOUT </a>
