--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
 			<a href="eatit.html"><img class="graficlogo" src="img/logo.png" alt="Logo"></a>
 		</div>
 		<nav>
-			<div class="topnav" id="myTopnav">                    <!-- ñòâîðþ êíîïêè íà ãîëîâí³é ñòîð³íö³ -->
-				<a href="eatit.html"> HOME </a>
+			<div class="topnav" id="myTopnav">                    <!-- Ã±Ã²Ã¢Ã®Ã°Ã¾ ÃªÃ­Ã®Ã¯ÃªÃ¨ Ã­Ã  Ã£Ã®Ã«Ã®Ã¢Ã­Â³Ã© Ã±Ã²Ã®Ã°Â³Ã­Ã¶Â³ -->
+				<a href="index.html"> HOME </a>
 				<a href="screenshots.html"> SCREENSHOTS </a>
 				<a href="about.html"> ABOUT </a>
 				<a href="contact.html"> CONTACT </a>
