--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</div>
 		<nav>
 			<div class="topnav" id="myTopnav">                    <!-- ñòâîðþ êíîïêè íà ãîëîâí³é ñòîð³íö³ -->
-				<a href="eatit.html"> HOME </a>
+				<a href="index.html"> HOME </a>
 				<a href="screenshots.html"> SCREENSHOTS </a>
 				<a href="about.html"> ABOUT </a>
 				<a href="contact.html"> CONTACT </a>
